--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
                     console : {
                         color : true,
                         level : 'DEBUG'
+                    },
+                    file : {
+                        level : 'DEBUG'
                     }
                 }
             })
